--- a/source/styles/_misc/fonts.scss
+++ b/source/styles/_misc/fonts.scss
@@ -1,24 +1,32 @@
 @font-face {
   font-family: "robotolight";
-  src: url("/assets/fonts/roboto-light-webfont.woff") format("woff"), url("/assets/fonts/roboto-light-webfont.woff2") format("woff2"), url("/assets/fonts/roboto-light-webfont.svg#robotolight") format("svg");
+  src: url("/assets/fonts/roboto-light-webfont.woff") format("woff"),
+       url("/assets/fonts/roboto-light-webfont.woff2") format("woff2"),
+       url("/assets/fonts/roboto-light-webfont.svg#robotolight") format("svg");
   font-weight: normal;
   font-style: normal; 
 }
 @font-face {
   font-family: "robotoregular";
-  src: url("/assets/fonts/roboto-regular-webfont.woff") format("woff"), url("/assets/fonts/roboto-regular-webfont.woff2") format("woff2"), url("/assets/fonts/roboto-regular-webfont.svg#robotoregular") format("svg");
+  src: url("/assets/fonts/roboto-regular-webfont.woff") format("woff"),
+       url("/assets/fonts/roboto-regular-webfont.woff2") format("woff2"),
+       url("/assets/fonts/roboto-regular-webfont.svg#robotoregular") format("svg");
   font-weight: normal;
   font-style: normal; 
 }
 @font-face {
   font-family: "robotomedium";
-  src: url("/assets/fonts/roboto-medium-webfont.woff") format("woff"), url("/assets/fonts/roboto-medium-webfont.woff2") format("woff2"), url("/assets/fonts/roboto-medium-webfont.svg#robotomedium") format("svg");
+  src: url("/assets/fonts/roboto-medium-webfont.woff") format("woff"),
+       url("/assets/fonts/roboto-medium-webfont.woff2") format("woff2"),
+       url("/assets/fonts/roboto-medium-webfont.svg#robotomedium") format("svg");
   font-weight: normal;
   font-style: normal; 
 }
 @font-face {
   font-family: "robotobold";
-  src: url("/assets/fonts/roboto-bold-webfont.woff") format("woff"), url("/assets/fonts/roboto-bold-webfont.woff2") format("woff2"), url("/assets/fonts/roboto-bold-webfont.svg#robotobold") format("svg");
+  src: url("/assets/fonts/roboto-bold-webfont.woff") format("woff"),
+       url("/assets/fonts/roboto-bold-webfont.woff2") format("woff2"),
+       url("/assets/fonts/roboto-bold-webfont.svg#robotobold") format("svg");
   font-weight: normal;
   font-style: normal; 
 }
@@ -28,11 +36,15 @@
   font-weight: normal;
   font-style: normal; 
 }
-
-
-@mixin myriad {
-  font-family: "myriad_regular";
+@font-face {
+  font-family: "pt_sansbold";
+  src: url("/assets/fonts/pt_sans-web-bold-webfont.woff") format("woff"),
+       url("/assets/fonts/pt_sans-web-bold-webfont.woff2") format("woff2"),
+       url("/assets/fonts/pt_sans-web-bold-webfont.svg#pt_sansbold") format("svg");
+  font-weight: normal;
+  font-style: normal;
 }
+
 
 @mixin roboto($style: regular) {
   @if $style == regular {
@@ -48,3 +60,9 @@
     font-family: "robotomedium";
   }
 } 
+@mixin ptsans {
+  font-family: "pt_sansbold";
+}
+@mixin myriad {
+  font-family: "myriad_regular";
+}
