--- a/source/styles/blocks/product.scss
+++ b/source/styles/blocks/product.scss
@@ -1,18 +1,26 @@
 .products {
-    width: 560px;
-    min-height: 392px;
     position: absolute;
-    bottom: -60px;
-    transform: translateX(-64%);
+    width: 560px;
+    height: 392px;
+    bottom: -3.95rem;
+    transform: translateX(-64.3%);
+
+    @include laptop {
+        @include centered(x);
+    }
+
+    @include phone {
+        transform: translateX(-48%);
+    }
 
     &__polywhite, &__polyblack {
         position: absolute;
         max-width: 80%;
-        max-height: 80%
+        max-height: 80.5%;
     }
     
     &__polywhite {
-        bottom: 19%;
+        bottom: 18%;
         left: 15%;
     }
 
@@ -64,7 +72,7 @@
         bottom: 0px;
         left: 0px;
         width: 321px;
-        background: url(/assets/img/box-black.png) 20px 68px no-repeat;
+        background: url('/assets/img/box-black.png') 20px 68px no-repeat;
         background-size: 77%;
     }
 
@@ -132,8 +140,8 @@
         left: -16px;
         width: 146px;
         height: 123px;
-        background: url(/assets/img/pink-line.svg) 44px 83px no-repeat,
-                    url(/assets/img/pink-row.svg) right bottom no-repeat;
+        background: url('/assets/img/pink-line.svg') 2.875rem 5rem no-repeat, url('/assets/img/pink-row.svg') right 6.75rem no-repeat;
+        background-size: 70%, 12%;
     }
 
     &__row-text {
@@ -156,7 +164,7 @@
         bottom: 0px;
         right: 0px;
         width: 265px;
-        background: url(/assets/img/box-yellow.png) 3px 28px no-repeat;
+        background: url('/assets/img/box-yellow.png') 3px 28px no-repeat;
         background-size: 87%
     }
 
@@ -196,12 +204,14 @@
         bottom: -10px;
         width: 100px;
         height: 139px;
-        background: url(/assets/img/box-shadow.png) center no-repeat;
+        background: url('/assets/img/box-shadow.png') center no-repeat;
         background-size: cover;
     }
 
     &__text_right {
-        padding: 7px 27px;
+        position: relative;
+        padding: 7px 40px;
+        margin-left: -16px;
     }
 
 }
