--- a/source/styles/blocks/collback.scss
+++ b/source/styles/blocks/collback.scss
@@ -7,17 +7,48 @@
     padding: 8px 18px 8px 13px;
     max-width: 200px;
     text-decoration: none;
+    transition: .3s;
+
+    @include phone {
+        max-width: 300px;
+        padding: 1.1rem 2.625rem 1.1rem 1.4125rem;
+    }
+
+    &:hover {
+        background: $white;
+
+        .collback__icon {
+            fill: $green;
+        }
+
+        .collback__text {
+            color: $green;
+        }
+    }
 
     &__icon {
         width: 21px;
         height: 21px;
         fill: $white;
         margin-right: 10px;
+        transition: .3s;
+
+        @include phone {
+            width: 30px;
+            height: 30px;
+        }
     }
 
     &__text {
             @include roboto(medium);
             font-size: 16px;
             color: $white;
+            white-space: nowrap;
+            transition: .3s;
+            
+            @include phone {
+                font-size: 20px;
+            }
     }
+
 }
