--- a/source/styles/blocks/info.scss
+++ b/source/styles/blocks/info.scss
@@ -3,6 +3,10 @@
     flex-direction: column;
     padding-top: 60px;
 
+    @include laptop {
+        padding-top: 0px;
+    }
+
     &__title {
         text-align: center;
         margin-bottom: 2px;
