--- a/source/styles/blocks/structure.scss
+++ b/source/styles/blocks/structure.scss
@@ -24,7 +24,6 @@
             bottom: 4px;
             background-color: #ffe200;
         }
-
     }
 
     &__text {
@@ -42,11 +41,11 @@
     &::before {
         content: "";
         position: absolute;
-        width: 600px;
-        height: 491px;
-        bottom: -55px;
-        right: 250px;
+        width: 59.5vmin;
+        height: 46vmin;
+        bottom: -19px;
+        left: 49.3vw;
         background: url('/assets/img/structure_bg-shape.png') center no-repeat;
-        background-size: cover;
+        background-size: contain;
     }
 }
