--- a/source/template/common/head.pug
+++ b/source/template/common/head.pug
@@ -10,11 +10,11 @@ head
   //- favicon block start
   //- favicon block end
 
-  link(rel="stylesheet" href="/assets/css/foundation%=suffix=%.css%=version=%")
-  link(rel="stylesheet" href="/assets/css/main%=suffix=%.css%=version=%")
+  link(rel="stylesheet" href="assets/css/foundation%=suffix=%.css%=version=%")
+  link(rel="stylesheet" href="assets/css/main%=suffix=%.css%=version=%")
 
   script document.createElement( "picture" );
-  script(src="/assets/js/picturefill%=suffix=%.js%=version=%" async)
+  script(src="assets/js/picturefill%=suffix=%.js%=version=%" async)
 
   <!--[if lt IE 10]>
     <p class="browsehappy">Вы используете <strong>устаревший</strong> браузер. Пожалуйста <a href="http://browsehappy.com/">обновите его</a></p>
