--- a/source/template/common/header.pug
+++ b/source/template/common/header.pug
@@ -3,27 +3,27 @@ header.header
     .header__inner
       .header__logo
         a(href="#").logo
-          img(class="logo__img" src="/assets/img/logo.png" alt="silver fruits")
+          img(class="logo__img" src="assets/img/logo.png" alt="silver fruits")
       .header__info
         ul.advantages
           li.advantages__item
             .advantages__pic
               svg.advantages__icon
-                use(xlink:href="/assets/img/sprite.svg#dna")
+                use(xlink:href="assets/img/sprite.svg#dna")
             .advantages__text
               p.
                 Сбалансированный состав
           li.advantages__item
             .advantages__pic
               svg.advantages__icon.advantages__icon_finger
-                use(xlink:href="/assets/img/sprite.svg#finger")
+                use(xlink:href="assets/img/sprite.svg#finger")
             .advantages__text
               p.
                 Одобрен специалистами
           li.advantages__item
             .advantages__pic
               svg.advantages__icon
-                use(xlink:href="/assets/img/sprite.svg#timer")
+                use(xlink:href="assets/img/sprite.svg#timer")
             .advantages__text
               p.
                 Быстрый результат
@@ -31,5 +31,5 @@ header.header
       .header__contacts
         a.collback(href="#")
           svg.collback__icon
-            use(xlink:href="/assets/img/sprite.svg#phone")
+            use(xlink:href="assets/img/sprite.svg#phone")
           span.collback__text Заказать звонок
