--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -13,7 +13,7 @@ block content
               h1.title.title_color_white Тестовое задание по верстке
             .info__descr
               svg.info__icon
-                use(xlink:href="/assets/img/sprite.svg#wave")
+                use(xlink:href="assets/img/sprite.svg#wave")
               p.
                 Lorem ipsum dolor sit <span>Silver fruits Fruits</span> consectetuer adipiscing elit
             
@@ -37,8 +37,8 @@ block content
                 input(class="form__input" id="tel" type="tel" name="tel" placeholder="Ваш телефон")
                 button(class="form__btn" type="submit" id="formbtn") Тест Тест Тест Тест
         .products
-          img(class="products__polywhite" src="/assets/img/polygon-white.svg", alt="polygon")
-          img(class="products__polyblack" src="/assets/img/polygon-black.svg", alt="polygon")
+          img(class="products__polywhite" src="assets/img/polygon-white.svg", alt="polygon")
+          img(class="products__polyblack" src="assets/img/polygon-black.svg", alt="polygon")
           .products__left
           a(href="#").products__icon
           .products__row
@@ -71,7 +71,7 @@ block content
         ul.cards
           li.cards__item
             .cards__pic
-              img(class="cards__img" src="/assets/img/item1.png", alt="element")
+              img(class="cards__img" src="assets/img/item1.png", alt="element")
             .cards__text 
               .cards__title Fringilla vel
               .cards__descr
@@ -79,7 +79,7 @@ block content
                   Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.
           li.cards__item
             .cards__pic
-              img(class="cards__img" src="/assets/img/item2.png", alt="element")
+              img(class="cards__img" src="assets/img/item2.png", alt="element")
             .cards__text 
               .cards__title Aliquet
               .cards__descr
@@ -88,7 +88,7 @@ block content
 
           li.cards__item
             .cards__pic
-              img(class="cards__img" src="/assets/img/item3.png", alt="element")
+              img(class="cards__img" src="assets/img/item3.png", alt="element")
             .cards__text 
               .cards__title Vulputate eget arcu
               .cards__descr
@@ -97,7 +97,7 @@ block content
 
           li.cards__item
             .cards__pic
-              img(class="cards__img" src="/assets/img/item4.png", alt="element")
+              img(class="cards__img" src="assets/img/item4.png", alt="element")
             .cards__text 
               .cards__title Enim justo
               .cards__descr
