--- a/source/styles/_misc/fonts.scss
+++ b/source/styles/_misc/fonts.scss
@@ -1,46 +1,46 @@
 @font-face {
   font-family: "robotolight";
-  src: url("/assets/fonts/roboto-light-webfont.woff") format("woff"),
-       url("/assets/fonts/roboto-light-webfont.woff2") format("woff2"),
-       url("/assets/fonts/roboto-light-webfont.svg#robotolight") format("svg");
+  src: url("../fonts/roboto-light-webfont.woff") format("woff"),
+       url("../fonts/roboto-light-webfont.woff2") format("woff2"),
+       url("../fonts/roboto-light-webfont.svg#robotolight") format("svg");
   font-weight: normal;
   font-style: normal; 
 }
 @font-face {
   font-family: "robotoregular";
-  src: url("/assets/fonts/roboto-regular-webfont.woff") format("woff"),
-       url("/assets/fonts/roboto-regular-webfont.woff2") format("woff2"),
-       url("/assets/fonts/roboto-regular-webfont.svg#robotoregular") format("svg");
+  src: url("../fonts/roboto-regular-webfont.woff") format("woff"),
+       url("../fonts/roboto-regular-webfont.woff2") format("woff2"),
+       url("../fonts/roboto-regular-webfont.svg#robotoregular") format("svg");
   font-weight: normal;
   font-style: normal; 
 }
 @font-face {
   font-family: "robotomedium";
-  src: url("/assets/fonts/roboto-medium-webfont.woff") format("woff"),
-       url("/assets/fonts/roboto-medium-webfont.woff2") format("woff2"),
-       url("/assets/fonts/roboto-medium-webfont.svg#robotomedium") format("svg");
+  src: url("../fonts/roboto-medium-webfont.woff") format("woff"),
+       url("../fonts/roboto-medium-webfont.woff2") format("woff2"),
+       url("../fonts/roboto-medium-webfont.svg#robotomedium") format("svg");
   font-weight: normal;
   font-style: normal; 
 }
 @font-face {
   font-family: "robotobold";
-  src: url("/assets/fonts/roboto-bold-webfont.woff") format("woff"),
-       url("/assets/fonts/roboto-bold-webfont.woff2") format("woff2"),
-       url("/assets/fonts/roboto-bold-webfont.svg#robotobold") format("svg");
+  src: url("../fonts/roboto-bold-webfont.woff") format("woff"),
+       url("../fonts/roboto-bold-webfont.woff2") format("woff2"),
+       url("../fonts/roboto-bold-webfont.svg#robotobold") format("svg");
   font-weight: normal;
   font-style: normal; 
 }
 @font-face {
   font-family: "myriad_regular";
-  src: url("/assets/fonts/myriad-pro-regular.woff") format("woff");
+  src: url("../fonts/myriad-pro-regular.woff") format("woff");
   font-weight: normal;
   font-style: normal; 
 }
 @font-face {
   font-family: "pt_sansbold";
-  src: url("/assets/fonts/pt_sans-web-bold-webfont.woff") format("woff"),
-       url("/assets/fonts/pt_sans-web-bold-webfont.woff2") format("woff2"),
-       url("/assets/fonts/pt_sans-web-bold-webfont.svg#pt_sansbold") format("svg");
+  src: url("../fonts/pt_sans-web-bold-webfont.woff") format("woff"),
+       url("../fonts/pt_sans-web-bold-webfont.woff2") format("woff2"),
+       url("../fonts/pt_sans-web-bold-webfont.svg#pt_sansbold") format("svg");
   font-weight: normal;
   font-style: normal;
 }
