--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -21,6 +21,8 @@
         @include phone {
             justify-content: center;
             padding-top: 7px;
+            padding-bottom: 22px;
+
         }
     }
 
