--- a/source/styles/blocks/product.scss
+++ b/source/styles/blocks/product.scss
@@ -72,7 +72,7 @@
         bottom: 0px;
         left: 0px;
         width: 321px;
-        background: url('../img/box-black.png') 20px 68px no-repeat;
+        background: url('/assets/img/box-black.png') 20px 68px no-repeat;
         background-size: 77%;
     }
 
@@ -82,6 +82,11 @@
             left: 83px;
             width: 194px;
             height: 57px;
+
+            @include laptop {
+                left: 5.7875rem;
+            }
+
         &::before {
             content: "";
             position: absolute;
@@ -140,7 +145,7 @@
         left: -16px;
         width: 146px;
         height: 123px;
-        background: url('../img/pink-line.svg') 2.875rem 5rem no-repeat, url('../img/pink-row.svg') right 6.75rem no-repeat;
+        background: url('/assets/img/pink-line.svg') 2.875rem 5rem no-repeat, url('/assets/img/pink-row.svg') right 6.75rem no-repeat;
         background-size: 70%, 12%;
     }
 
@@ -164,8 +169,8 @@
         bottom: 0px;
         right: 0px;
         width: 265px;
-        background: url('../img/box-yellow.png') 3px 28px no-repeat;
-        background-size: 87%
+        background: url('/assets/img/box-yellow.png') 3px 28px no-repeat;
+        background-size: 87%;
     }
 
     &__descr-right {
@@ -194,7 +199,8 @@
             height: 66px;
             top: -5px;
             left: -45px;
-            background: url('../img/sphere.png') no-repeat;
+            background: url('/assets/img/sphere.png') center no-repeat;
+            background-size: contain;
         }
     }
 
@@ -204,7 +210,7 @@
         bottom: -10px;
         width: 100px;
         height: 139px;
-        background: url('../img/box-shadow.png') center no-repeat;
+        background: url('/assets/img/box-shadow.png') center no-repeat;
         background-size: cover;
     }
 
